; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-handle-prelist.c_main.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-ext/extr_test-ext-handle-scope-handle-prelist.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@JERRY_INIT_EMPTY = common dso_local global i32 0, align 4
@native_free_cb_call_count = common dso_local global i64 0, align 8
@JERRY_GC_PRESSURE_LOW = common dso_local global i32 0, align 4
@handle_count = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = load i32, i32* @JERRY_INIT_EMPTY, align 4
  %2 = call i32 @jerry_init(i32 %1)
  store i64 0, i64* @native_free_cb_call_count, align 8
  %3 = call i32 (...) @test_handle_scope_val()
  %4 = load i32, i32* @JERRY_GC_PRESSURE_LOW, align 4
  %5 = call i32 @jerry_gc(i32 %4)
  %6 = load i64, i64* @native_free_cb_call_count, align 8
  %7 = load i64, i64* @handle_count, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @TEST_ASSERT(i32 %9)
  %11 = call i32 (...) @jerry_cleanup()
  ret i32 0
}

declare dso_local i32 @jerry_init(i32) #1

declare dso_local i32 @test_handle_scope_val(...) #1

declare dso_local i32 @jerry_gc(i32) #1

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @jerry_cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
